--- a/spec/support/config/fake_env.yml
+++ b/spec/support/config/fake_env.yml
@@ -1,8 +1,18 @@
 logging:
+  severity: "warn"
   color: true
-  time: false
-  level: false
-  severity: "info"
+  filter:
+    - password
+    - confirm_password
+  skip:
+    -
+  context:
+    - request
+    - session
+    - headers
+    - cookies
+    - params
+
 database_url: "mysql://root@localhost:3306/fake_settings_test"
 host: 0.0.0.0
 name: fake_settings
