--- a/shard.yml
+++ b/shard.yml
@@ -31,8 +31,8 @@ dependencies:
     version: ~> 0.4.0
 
   liquid:
-    github: TechMagister/liquid.cr
-    version: ~> 0.2.4
+    github: bcardiff/liquid.cr
+    branch: crystal/0.25.0
 
   micrate:
     github: amberframework/micrate
@@ -67,10 +67,10 @@ dependencies:
     version: "~> 0.1.8"
 
   teeplate:
-    github: amberframework/teeplate
-    version: ~> 0.5.0
+    github: bcardiff/teeplate
+    branch: crystal/v0.25.0
 
 development_dependencies:
   ameba:
-    github: veelenga/ameba
-    version: ~> 0.5.0
+    github: bcardiff/ameba
+    branch: crystal/0.25.0
