--- a/shard.yml
+++ b/shard.yml
@@ -60,7 +60,7 @@ dependencies:
 
   sqlite3:
     github: crystal-lang/crystal-sqlite3
-    version: ~> 0.11.0
+    branch: crystal/0.29.0
 
   inflector:
     github: phoffer/inflector.cr
@@ -75,5 +75,5 @@ dependencies:
 
 development_dependencies:
   ameba:
-    github: veelenga/ameba
-    version: ~> 0.8.0
+    github: bcardiff/ameba
+    branch: crystal/0.29.0
